# Sera-Autonomous-Agent

./: .gitignore  BLUEPRINT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STEP-BY-STEP.md  kimi-autonomous-ai-blueprint.md  pyproject.toml
.github/: branch-protection.md  pull_request_template.md  required-checks.json
installer/: manifest.json
phases/: 00-master-plan.md  01-package-scaffold.md  02-tool-registry-5-starter-tools-sqlite-fts5-sessio.md  03-llm-adapters-react-loop-cli-safety-wiring.md  04-egoist-skill-phases-folder-bootstrap.md  05-mid-turn-context-compression.md  05.5-security-fix-pass.md  06-prompt-cache-stability-anthropic-freeze-at-start.md  07-interrupt-shared-iteration-budget-grace-call.md  08-tokenjuice-output-compressor.md  09-write-locks-wal-crash-recovery.md  10-eval-harness-skeleton-telemetry.md  100-sera-is-in-the-room-with-them.md  11-memory-tree-schema-sqlite-sqlite-vss.md  12-semantic-chunker.md  13-embedder-multi-modal.md  14-obsidian-vault-sync-bidirectional.md  15-entity-extractor-typed-causal-edge-graph.md  16-hybrid-search-bm25-vector-graph-walk.md  17-freshness-scoring-decay.md  18-dedup-consolidation.md  19-privacy-redaction-layer.md  20-recall-benchmark-golden-set.md  21-skills-directory-manifest.md  22-skill-loader-dynamic-tool-registration.md  23-curator-background-fork.md  24-skill-lifecycle-pinned-active-stale-archived.md  25-skill-replay-verification.md  26-skill-a-b-harness.md  27-skill-versioning-diff.md  28-signed-skillpack-export.md  29-skill-quality-scoring.md  (+71 more)
sera-shell/src-tauri/: Cargo.toml  tauri.conf.json
sera-shell/src-tauri/src/: core_process.rs  core_rpc.rs  main.rs
(+306 files in other folders)
