[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sera"
version = "0.1.0"
description = "Sera — autonomous agent (Hermes brain × OpenHuman body)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Sera contributors" }]
dependencies = [
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "pydantic>=2.7.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "keyring>=24.3.0",
    "pyyaml>=6.0.1",
    "ddgs>=6.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "pyflakes>=3.0.0",
]
vss = [
    "sqlite-vss>=0.1.2",
]

[project.scripts]
sera = "sera.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sera*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
